// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`FplService getTopTransferredIn should return the top 10 transferred in 1`] = `
[
  {
    "first_name": "Player11",
    "id": 111,
    "second_name": "LastName11",
    "team": 211,
    "transfers_in_event": 78811,
    "transfers_out_event": 11411,
  },
  {
    "first_name": "Player15",
    "id": 115,
    "second_name": "LastName15",
    "team": 215,
    "transfers_in_event": 33515,
    "transfers_out_event": 415,
  },
  {
    "first_name": "Player20",
    "id": 120,
    "second_name": "LastName20",
    "team": 220,
    "transfers_in_event": 9320,
    "transfers_out_event": 4290,
  },
  {
    "first_name": "Player23",
    "id": 123,
    "second_name": "LastName23",
    "team": 223,
    "transfers_in_event": 8323,
    "transfers_out_event": 6423,
  },
  {
    "first_name": "Player6",
    "id": 106,
    "second_name": "LastName6",
    "team": 206,
    "transfers_in_event": 8306,
    "transfers_out_event": 7406,
  },
  {
    "first_name": "Player7",
    "id": 107,
    "second_name": "LastName7",
    "team": 207,
    "transfers_in_event": 7307,
    "transfers_out_event": 8407,
  },
  {
    "first_name": "Player22",
    "id": 122,
    "second_name": "LastName22",
    "team": 222,
    "transfers_in_event": 6322,
    "transfers_out_event": 7422,
  },
  {
    "first_name": "Player19",
    "id": 119,
    "second_name": "LastName19",
    "team": 219,
    "transfers_in_event": 6319,
    "transfers_out_event": 419,
  },
  {
    "first_name": "Player5",
    "id": 105,
    "second_name": "LastName5",
    "team": 205,
    "transfers_in_event": 6305,
    "transfers_out_event": 405,
  },
  {
    "first_name": "Player8",
    "id": 108,
    "second_name": "LastName8",
    "team": 208,
    "transfers_in_event": 5308,
    "transfers_out_event": 4085,
  },
]
`;

exports[`FplService getTopTransferredOut should return the top 10 transferred out 1`] = `
[
  {
    "first_name": "Player11",
    "id": 111,
    "second_name": "LastName11",
    "team": 211,
    "transfers_in_event": 78811,
    "transfers_out_event": 11411,
  },
  {
    "first_name": "Player7",
    "id": 107,
    "second_name": "LastName7",
    "team": 207,
    "transfers_in_event": 7307,
    "transfers_out_event": 8407,
  },
  {
    "first_name": "Player22",
    "id": 122,
    "second_name": "LastName22",
    "team": 222,
    "transfers_in_event": 6322,
    "transfers_out_event": 7422,
  },
  {
    "first_name": "Player6",
    "id": 106,
    "second_name": "LastName6",
    "team": 206,
    "transfers_in_event": 8306,
    "transfers_out_event": 7406,
  },
  {
    "first_name": "Player23",
    "id": 123,
    "second_name": "LastName23",
    "team": 223,
    "transfers_in_event": 8323,
    "transfers_out_event": 6423,
  },
  {
    "first_name": "Player21",
    "id": 121,
    "second_name": "LastName21",
    "team": 221,
    "transfers_in_event": 3921,
    "transfers_out_event": 4921,
  },
  {
    "first_name": "Player3",
    "id": 103,
    "second_name": "LastName3",
    "team": 203,
    "transfers_in_event": 3035,
    "transfers_out_event": 4403,
  },
  {
    "first_name": "Player17",
    "id": 117,
    "second_name": "LastName17",
    "team": 217,
    "transfers_in_event": 3157,
    "transfers_out_event": 4317,
  },
  {
    "first_name": "Player9",
    "id": 109,
    "second_name": "LastName9",
    "team": 209,
    "transfers_in_event": 3029,
    "transfers_out_event": 4309,
  },
  {
    "first_name": "Player20",
    "id": 120,
    "second_name": "LastName20",
    "team": 220,
    "transfers_in_event": 9320,
    "transfers_out_event": 4290,
  },
]
`;
